WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320674
techmeme.com: Repaint glitches on Techmeme.com after returning to the page using the back button
https://bugs.webkit.org/show_bug.cgi?id=320674
Summary
techmeme.com: Repaint glitches on Techmeme.com after returning to the page us...
Ian Gower
Reported
2026-07-30 11:37:27 PDT
rdar://161198753
On techmeme.com, hovering a source link shows an article-preview popover. After navigating away via one of those links and pressing Back, hovering a nearby link leaves a fragment of the previous popover painted on screen — a white rounded-corner strip with its drop shadow and clipped text, sitting over unrelated page content. It doesn't clear on further hovering.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2026-07-30 15:50:01 PDT
Committed
318277@main
(a60246ff6a2e): <
https://commits.webkit.org/318277@main
> Reviewed commits have been landed. Closing PR #70075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug